# claudeusage

./: AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  gen_icon.py
.github/workflows/: cmake-single-platform.yml
res/: app.manifest  app.rc
src/: api.c  api.h  config.c  config.h  http.c  http.h  main.c  popup.c  popup.h  util.c  util.h
